# desafio-tecnico-foco

./: README.md  pyproject.toml  requirements.txt
nbs/: resolucao.ipynb
src/: ts_plots.py
