[project]
name = "desafio-tecnico-foco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "holidays>=0.80",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "mlforecast>=1.0.2",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "outlier-utils>=0.0.5",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.2",
    "utilsforecast>=0.2.12",
]
